# mini-arc

./: .gitignore  README.md  arc_prize.ipynb  arc_transformer.ipynb  barc.ipynb  data.ipynb  dnc_demo.ipynb  dsl.ipynb  flax.ipynb  game_of_life.ipynb  html.ipynb  kaggle.ipynb  models.ipynb  prompt.ipynb  pyproject.toml  synth_data.ipynb
arc-editor/: package.json  tailwind.config.ts
arc_prize/: data.py  data_on_modal.py  env.py  eval.ipynb  eval_on_modal.py  meta.py  meta_on_modal.py  model.py  positional_encoding.py  synth_data.py  train.py  train_on_modal.py  vis.py
data/: arc-synth_move_right_evaluation_challenges.json  arc-synth_move_right_evaluation_solutions.json  arc-synth_move_right_training_challenges.json  arc-synth_move_right_training_solutions.json
experiments/: jolly_picked_stud-eval_dim_12-finetune-1.json  jolly_picked_stud-eval_dim_12-finetune-2.json  kindly_exact_beagle-eval_dim_12-finetune-1.json  kindly_exact_beagle-eval_dim_12-finetune-2.json  kindly_exact_beagle-eval_dim_12-finetune-3.json  kindly_exact_beagle-eval_dim_12-finetune.json  vastly_intent_frog_2-eval_dim_12-finetune-1.json
html/: 00576224.html  00dbd492.html  03560426.html  0607ce86.html  0692e18c.html  070dd51e.html  08573cc6.html  0934a4d8.html  0a1d4ef5.html  0b17323b.html  0bb8deee.html  0becf7df.html  0c786b71.html  0c9aba6e.html  0d87d2a6.html  0e671a1a.html  0f63c0b9.html  103eff5b.html  11e1fe23.html  12422b43.html  12997ef3.html  12eac192.html  13713586.html  137f0df0.html  140c817e.html  14754a24.html  15696249.html  17b80ad2.html  17cae0c1.html  18419cfa.html  (+12 more)
(+178 files in other folders)
