[tool.poetry]
name = "arc-prize"
version = "0.1.0"
description = ""
authors = ["Paul Fletcher-Hill <pfletcherhill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
drawsvg = "^2.4.0"
torch = "^2.3.1"
modal = "^0.63.92"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
