[tool.poetry]
name = "arc-prize"
version = "0.1.0"
description = ""
authors = ["Paul Fletcher-Hill <pfletcherhill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
drawsvg = "^2.4.0"
torch = "^2.4.1"
modal = "^0.63.92"
tqdm = "^4.66.4"
seaborn = "^0.13.2"
petname = "^2.6"
dataclasses-json = "^0.6.7"
scikit-learn = "^1.5.1"
selenium = "^4.24.0"
openai = "^1.45.1"
python-dotenv = "^1.0.1"
anthropic = "^0.34.2"
jax = "^0.4.34"
flax = "^0.9.0"
pydantic = "^2.9.2"
numpy = "1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
